[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/background/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Art/HUD Elements/Title.png" type="Texture" id=3]

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="Control"]
position = Vector2( 510.862, 299.752 )
texture = ExtResource( 1 )

[node name="CreditsLbl" type="Label" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 344.853
margin_top = 202.577
margin_right = -450.146
margin_bottom = -281.423
rect_scale = Vector2( 1.5, 1.5 )
text = "Ben - Art
Boris - Programming
Jillian - SFX/Music
Justine - Art
Quinlan - Programming

A game by Team Name Name Team"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 435.004
margin_top = 400.278
margin_right = -424.996
margin_bottom = -159.722
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 435.004
margin_top = 460.928
margin_right = -424.996
margin_bottom = -99.072
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 435.004
margin_top = 527.41
margin_right = -424.996
margin_bottom = -32.59
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 435.004
margin_top = 527.41
margin_right = -424.996
margin_bottom = -32.59
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Sprite" parent="Control"]
position = Vector2( 519.646, 130.149 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
[connection signal="pressed" from="Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="." method="_on_ExitButton_pressed"]
